Fix contact form spacing issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -180,6 +180,7 @@ ul {
 
   padding-left: 2rem;
   padding-right: 2rem;
+  margin-top: 4rem;
 
   min-width: 580px;
 }
@@ -205,7 +206,12 @@ ul {
 
 .contact-form-wrapper {
   width: 30rem;
-  margin:auto;
+  margin: auto;
+}
+
+.contact-form-div {
+  width: 100%;
+
 }
 
 .contact-label {
@@ -213,19 +219,19 @@ ul {
   font-size: 0.9rem;
 }
 
-.contact-text-field {
+.contact-text {
   border: 1px solid #BFBFBF;
   border-radius: 4px;
   background-color: #f7f7f7;
   width: 100%;
+}
+
+.contact-text-field {
   height: 2.4rem;
 }
 
 .contact-text-area {
-  border: 1px solid #BFBFBF;
-  border-radius: 4px;
-  background-color: #f7f7f7;
-  width: 100%;
+  width: calc(100% - 6px);
 }
 
 .contact-form-button {
@@ -245,6 +251,11 @@ ul {
   transition: 0.3s;
 }
 
+.contact-form-wrapper input {
+  box-sizing: border-box;
+  margin: auto;
+  padding: 0.25rem 1rem 0.25rem 1rem;
+}
 
 
 .content-wrapper {
